--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,30 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
+import Layout from "../layouts/Layout.astro";
+import Badge from "../components/Badge.astro";
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
-<Layout>
-	<Welcome />
+<Layout title="Porfolio devMarco">
+  <main>
+    <section class="w-full lg:w-[740px] mx-auto py-44">
+      <h1 class="text-white text-5xl font-bold flex flex-row gap-x-4 pb-10">
+        Hey, soy devMarco <a
+          href="https://linkedin.com/in/dev-marco-urrutia"
+          title="Mi Linkedin"
+          target="_blank"
+          rel="noopener"
+          class="flex justify-center items-center"
+        >
+          <Badge>Disponible para trabajar</Badge>
+        </a>
+      </h1>
+      <h2 class="text-xl opacity-80">
+        Soy un desarrollador Full-Stack siempre buscando aprender y ampliar mis
+        habilidades de programación. Disfruto trabajando en proyectos que me
+        ayudan a crecer y profundizar mi comprensión del desarrollo web.
+      </h2>
+    </section>
+  </main>
 </Layout>
