--- a/src/components/Badge.astro
+++ b/src/components/Badge.astro
@@ -1,4 +1,1 @@
-<span
-  class="bg-green-100 text-green-800 text-xs font-medium me-2 px-2.5 py-2 rounded-sm dark:bg-gray-700 dark:text-green-400 border border-green-400"
-  ><slot /></span
->
+<span class="bg-blue-100 h-fit hover:bg-blue-200 text-blue-800 text-sm font-medium me-2 px-2.5 py-0.5 rounded-sm dark:bg-gray-700 dark:text-blue-400 border border-blue-400 inline-flex items-center justify-center"><slot /></span>
