--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,7 @@ const { title } = Astro.props;
   </body>
 </html>
 
-<style>
+<style is:global>
   :root {
     color-scheme: light dark;
   }
@@ -35,6 +35,6 @@ const { title } = Astro.props;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #1f2937;
+    background-color: #111827;
   }
 </style>
