bg color and SocialMediaPills

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,10 @@
 ---
-import foto from "../assets/fotoperfil.webp";
+
 ---
 
-<header class="flex justify-between items-center p-3 w-full lg:w-[1120px] mx-auto shadow-md rounded-b-lg">
-  <img class="rounded-full w-12 h-12 ring-2 ring-gray-300" src={foto.src} alt="devMarco Foto" />
+<header
+  class="flex justify-center items-center p-3 w-full lg:w-[1120px] mx-auto"
+>
   <nav class="flex flex-row gap-x-10 opacity-80">
     <a href="/">Inicio</a>
     <a href="/acerca">Sobre Mi</a>
@@ -11,9 +12,3 @@ import foto from "../assets/fotoperfil.webp";
     <a href="/contacto">Contacto</a>
   </nav>
 </header>
-
-<style>
-  header {
-    background-color: #1f2937;
-  }
-</style>
