--- a/src/components/Badge.astro
+++ b/src/components/Badge.astro
@@ -1,1 +1,4 @@
-<span class="bg-blue-100 h-fit hover:bg-blue-200 text-blue-800 text-sm font-medium me-2 px-2.5 py-0.5 rounded-sm dark:bg-gray-700 dark:text-blue-400 border border-blue-400 inline-flex items-center justify-center"><slot /></span>
+<span
+  class="bg-indigo-100 hover:bg-indigo-200 text-indigo-800 text-sm font-medium me-2 px-2.5 py-0.5 rounded-sm dark:bg-gray-700 dark:text-indigo-400 border border-indigo-400 inline-flex items-center justify-center"
+  ><slot /></span
+>
