--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,11 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Badge from "../components/Badge.astro";
-import Maletin from "../components/Maletin.astro"
+import Maletin from "../components/Maletin.astro";
+import foto from "../assets/fotoperfil.webp";
+import SocialPill from "../components/SocialPill.astro";
+import LinkedinIcon from "../Icons/Linkedin.astro";
+import GitHubIcon from "../Icons/GitHub.astro";
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -10,24 +14,46 @@ import Maletin from "../components/Maletin.astro"
 <Layout title="Porfolio devMarco">
   <main>
     <section class="w-[90%] lg:w-[760px] mt-20">
-      <h1 class="text-white text-5xl  font-bold flex flex-row items-center gap-x-2 py-3">
-        Hey, soy devMarco <a
-          href="https://linkedin.com/in/dev-marco-urrutia"
-          title="Mi Linkedin"
-          target="_blank"
-          rel="noopener"
-          class="flex justify-center items-center"
+      <div>
+        <img
+          class="rounded-full w-20 h-20 ring-2 ring-[rgba(102,51,238,0.5)]"
+          src={foto.src}
+          alt="devMarco Foto"
+        />
+        <h1
+          class="text-white text-5xl font-bold flex flex-row items-center gap-x-2 py-3"
         >
-          <Badge>Disponible para trabajar</Badge>
-        </a>
-      </h1>
+          Hey, soy devMarco <a
+            href="https://linkedin.com/in/dev-marco-urrutia"
+            title="Mi Linkedin"
+            target="_blank"
+            rel="noopener"
+            class="flex justify-center items-center"
+          >
+            <Badge>Disponible para trabajar</Badge>
+          </a>
+        </h1>
+      </div>
       <h2 class="text-xl opacity-80 py-5">
-        🌟 Apasionado por el desarrollo web, enfocado en calidad e innovación. Siempre buscando llevar los proyectos a nuevas órbitas 🚀.
+        🌟 Apasionado por el desarrollo web, enfocado en calidad e innovación.
+        Siempre buscando llevar los proyectos a nuevas órbitas 🚀.
       </h2>
+      <nav class="flex gap-x-4 mt-2">
+        <SocialPill href="https://www.linkedin.com/in/dev-marco-urrutia">
+          <LinkedinIcon class="w-6 h-6" />
+          Linkedin
+        </SocialPill>
+        <SocialPill href="https://github.com/marcourrutia">
+          <GitHubIcon class="w-6 h-6" />
+          GitHub
+        </SocialPill>
+      </nav>
     </section>
-    <hr class="my-10 opacity-30"/>
+    <hr class="my-8 opacity-30" />
     <section class="w-[90%] lg:w-[760px]">
-      <h1 class="text-white text-xl  font-bold flex gap-x-2">Experiencia <Maletin /></h1>
+      <h1 class="text-white text-xl font-bold flex gap-x-2">
+        Experiencia <Maletin />
+      </h1>
     </section>
   </main>
 </Layout>
