--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,7 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="es">
+<html lang="es" class="[background:radial-gradient(125%_125%_at_50%_10%,#000_40%,#63e_100%)]">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
@@ -18,15 +18,11 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
+  <Header />
   <body>
-    <div
-      class="absolute inset-0 -z-10 h-full w-full items-center px-5 py-24 [background:radial-gradient(125%_125%_at_50%_10%,#000_40%,#63e_100%)]"
-    >
-    </div>
+    <slot />
   </body>
 </html>
-<Header />
-<slot />
 
 <style is:global>
   :root {
@@ -39,6 +35,5 @@ const { title } = Astro.props;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #111827;
   }
 </style>
