experience, smooth y blur

--- a/src/Sections/Experience.astro
+++ b/src/Sections/Experience.astro
@@ -1,14 +1,14 @@
 ---
-import StudyIcon from "../Icons/Study.astro";
+import BriefcaseIcon from "../Icons/Briefcase.astro";
 import BookMarkIcon from "../Icons/BookMark.astro";
 import ExperienceItem from "../components/ExperienceItem.astro";
 ---
 
-<section id="estudios" class="w-[90%] lg:w-[760px]">
+<section id="laboral" class="w-[90%] lg:w-[760px]">
   <h1
-    class="text-white text-2xl font-semibold flex items-center gap-x-2 py-5 my-3"
+    class="text-white text-2xl font-semibold flex items-center gap-x-3 py-5 my-3"
   >
-    Educación <StudyIcon class="size-7" />
+    Experiencia Laboral <BriefcaseIcon class="size-7" />
   </h1>
   <ul class="list-none space-y-6">
     <ExperienceItem
