--- a/src/Sections/Profile.astro
+++ b/src/Sections/Profile.astro
@@ -6,39 +6,39 @@ import LinkedinIcon from "../Icons/Linkedin.astro";
 import GitHubIcon from "../Icons/GitHub.astro";
 ---
 
-<section class="w-[90%] lg:w-[760px] mt-20">
-    <div>
-      <img
-        class="rounded-full size-20 ring-2 ring-[rgba(102,51,238,0.5)]"
-        src={foto.src}
-        alt="devMarco Foto"
-      />
-      <h1
-        class="text-white text-5xl font-bold flex flex-row items-center gap-x-2 py-3"
+<section id="sobre-mi" class="w-[90%] lg:w-[760px] mt-20">
+  <div>
+    <img
+      class="rounded-full size-20 ring-2 ring-[rgba(102,51,238,0.5)]"
+      src={foto.src}
+      alt="devMarco Foto"
+    />
+    <h1
+      class="text-white text-5xl font-bold flex flex-row items-center gap-x-2 py-3"
+    >
+      Hey, soy devMarco <a
+        href="https://linkedin.com/in/dev-marco-urrutia"
+        title="Mi Linkedin"
+        target="_blank"
+        rel="noopener"
+        class="flex justify-center items-center"
       >
-        Hey, soy devMarco <a
-          href="https://linkedin.com/in/dev-marco-urrutia"
-          title="Mi Linkedin"
-          target="_blank"
-          rel="noopener"
-          class="flex justify-center items-center"
-        >
-          <Badge>Disponible para trabajar</Badge>
-        </a>
-      </h1>
-    </div>
-    <h2 class="text-xl opacity-80 py-5">
-      🌟 Apasionado por el desarrollo web, enfocado en calidad e innovación.
-      Siempre buscando llevar los proyectos a nuevas órbitas 🚀.
-    </h2>
-    <nav class="flex gap-x-4 mt-2">
-      <SocialPill href="https://www.linkedin.com/in/dev-marco-urrutia">
-        <LinkedinIcon class="size-6" />
-        Linkedin
-      </SocialPill>
-      <SocialPill href="https://github.com/marcourrutia">
-        <GitHubIcon class="size-6" />
-        GitHub
-      </SocialPill>
-    </nav>
-  </section>
+        <Badge>Disponible para trabajar</Badge>
+      </a>
+    </h1>
+  </div>
+  <h2 class="text-xl opacity-80 py-5">
+    🌟 Apasionado por el desarrollo web, enfocado en calidad e innovación.
+    Siempre buscando llevar los proyectos a nuevas órbitas 🚀.
+  </h2>
+  <nav class="flex gap-x-4 mt-2">
+    <SocialPill href="https://www.linkedin.com/in/dev-marco-urrutia">
+      <LinkedinIcon class="size-6" />
+      Linkedin
+    </SocialPill>
+    <SocialPill href="https://github.com/marcourrutia">
+      <GitHubIcon class="size-6" />
+      GitHub
+    </SocialPill>
+  </nav>
+</section>
