--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,19 @@
 ---
-import Layout from "../layouts/Layout.astro"
-import Profile from "../Sections/Profile.astro"
-import Education from "../Sections/Education.astro"
+import Layout from "../layouts/Layout.astro";
+import Profile from "../Sections/Profile.astro";
+import Education from "../Sections/Education.astro";
+import Experience from "../Sections/Experience.astro";
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout title="Porfolio devMarco">
-  <main class="pb-20">
+  <main class="py-20">
     <Profile />
     <hr class="my-8 opacity-30" />
     <Education />
+    <hr class="my-8 opacity-30" />
+    <Experience />
   </main>
 </Layout>
