--- a/src/Sections/Experience.astro
+++ b/src/Sections/Experience.astro
@@ -12,18 +12,10 @@ import ExperienceItem from "../components/ExperienceItem.astro";
   </h1>
   <ul class="list-none space-y-6">
     <ExperienceItem
-      title="4Geeks Academy"
-      subTitle="Desarrollador de Software Full Stack"
-      description="Desarrollo de aplicaciones web completas con HTML, CSS, JavaScript para el frontend, y Python con Flask para el backend."
-      date="nov 2024"
-    >
-      <BookMarkIcon class="size-6" slot="icon" />
-    </ExperienceItem>
-    <ExperienceItem
-      title="Instituto Profesional Virginio Gomez"
-      subTitle="Ingeniero de Ejecución en Computación e Informática"
-      description=""
-      date="ago 2021"
+      title="Complejo asistencial Dr. Victor Ríos Ruíz"
+      subTitle="Referente de registro de Listas de espera"
+      description="Registrar ingresos y egresos de solicitudes de Listas de Espera en los sistemas ministeriales. Proveer de información actualizada a Jefaturas para la toma de decisiones relacionadas a la resolución de solicitudes de Listas de Espera."
+      date="sep 2015 - Actualmente"
     >
       <BookMarkIcon class="size-6" slot="icon" />
     </ExperienceItem>
