--- a/src/Sections/Profile.astro
+++ b/src/Sections/Profile.astro
@@ -4,6 +4,8 @@ import foto from "../assets/fotoperfil.webp";
 import SocialPill from "../components/SocialPill.astro";
 import LinkedinIcon from "../Icons/Linkedin.astro";
 import GitHubIcon from "../Icons/GitHub.astro";
+import GmailIcon from "../Icons/Gmail.astro";
+import SendIcon from "../Icons/Send.astro";
 ---
 
 <section id="sobre-mi" class="w-[90%] lg:w-[760px] mt-20">
@@ -31,14 +33,28 @@ import GitHubIcon from "../Icons/GitHub.astro";
     🌟 Apasionado por el desarrollo web, enfocado en calidad e innovación.
     Siempre buscando llevar los proyectos a nuevas órbitas 🚀.
   </h2>
-  <nav class="flex gap-x-4 mt-2">
-    <SocialPill href="https://www.linkedin.com/in/dev-marco-urrutia">
-      <LinkedinIcon class="size-6" />
-      Linkedin
-    </SocialPill>
-    <SocialPill href="https://github.com/marcourrutia">
-      <GitHubIcon class="size-6" />
-      GitHub
-    </SocialPill>
-  </nav>
+  <div class="flex justify-between items-center">
+    <nav class="flex gap-x-4 items-center">
+      <SocialPill
+        href="https://www.linkedin.com/in/dev-marco-urrutia"
+        title="Linkedin"
+      >
+        <LinkedinIcon class="size-6" />
+        Linkedin
+      </SocialPill>
+      <SocialPill href="https://github.com/marcourrutia" title="GitHub">
+        <GitHubIcon class="size-6" />
+        GitHub
+      </SocialPill>
+    </nav>
+    <div class="flex gap-x-2">
+      <div class="flex gap-x-2 text-white/80 rounded-full border border-white/10 bg-white/5 py-2 px-4 text-center">
+        <GmailIcon class="size-6" />
+        <label>m.urrutia1991@gmail.com</label>
+      </div>
+      <SocialPill href="mailto:m.urrutia1991@gmail.com" title="Enviar email">
+        <SendIcon class="size-6" />
+      </SocialPill>
+    </div>
+  </div>
 </section>
