--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,11 +9,11 @@ import Experience from "../Sections/Experience.astro";
 ---
 
 <Layout title="Porfolio devMarco">
-  <main class="py-20">
+  <main class="my-40">
     <Profile />
-    <hr class="my-8 opacity-30" />
+    <hr class="my-20 opacity-20" />
     <Education />
-    <hr class="my-8 opacity-30" />
+    <hr class="my-20 opacity-20" />
     <Experience />
   </main>
 </Layout>
