--- a/src/components/Tooltip.astro
+++ b/src/components/Tooltip.astro
@@ -1,9 +1,20 @@
+---
+interface Props {
+  text: string;
+}
+
+const { text } = Astro.props;
+---
+
 <div class="tooltip">
   <slot />
-  <span class="tooltiptext">Tooltip text</span>
+  <span
+    class="tooltiptext text-white/80 rounded-full border border-white/10 bg-white/5"
+    >{text}</span
+  >
 </div>
 
-<style>
+<style is:global>
   /* Tooltip container */
   .tooltip {
     position: relative;
@@ -13,7 +24,6 @@
   .tooltip .tooltiptext {
     visibility: hidden;
     width: 120px;
-    background-color: black;
     color: #fff;
     text-align: center;
     padding: 5px 0;
@@ -22,10 +32,13 @@
     /* Position the tooltip text - see examples below! */
     position: absolute;
     z-index: 1;
+    top: -125%;
+    left: -55%;
   }
 
   /* Show the tooltip text when you mouse over the tooltip container */
   .tooltip:hover .tooltiptext {
+    transition: 0.8s;
     visibility: visible;
   }
 </style>
