--- a/src/Sections/Profile.astro
+++ b/src/Sections/Profile.astro
@@ -8,9 +8,6 @@ import GmailIcon from "../Icons/Gmail.astro";
 import SendIcon from "../Icons/Send.astro";
 import Tooltip from "../components/Tooltip.astro";
 import CopyIcon from "../Icons/Copy.astro";
-import { copyToClipboard } from "../utils/clipboard";
-
-const email = "m.urrutia1991@gmail.com";
 ---
 
 <section id="sobre-mi" class="w-[90%] lg:w-[760px] flex flex-col gap-y-3">
@@ -64,11 +61,24 @@ const email = "m.urrutia1991@gmail.com";
           <SendIcon class="size-6" />
         </SocialPill>
       </Tooltip>
-      <Tooltip text="Copiar email">
-        <SocialPill>
-          <CopyIcon class="size-6" />
-        </SocialPill>
-      </Tooltip>
+      <button
+        class="text-white/80 rounded-full border border-white/10 flex justify-center items-center gap-x-2 py-2 px-4 bg-white/5 hover:scale-110 hover:bg-white/10 transition"
+        onclick="copiarContenido()"
+      >
+        <CopyIcon class="size-6" />
+      </button>
     </div>
   </div>
 </section>
+
+<script>
+  const email = "m.urrutia1991@gmail.com";
+  const copiarContenido = async () => {
+    try {
+      await navigator.clipboard.writeText(email);
+      console.log("Contenido copiado al portapapeles");
+    } catch (err) {
+      console.error("Error al copiar: ", err);
+    }
+  };
+</script>
