button copy ok y toast con alpinejs

--- a/src/Sections/Experience.astro
+++ b/src/Sections/Experience.astro
@@ -8,12 +8,12 @@ import ExperienceItem from "../components/ExperienceItem.astro";
   <h1
     class="text-white text-2xl font-semibold flex items-center gap-x-3 py-5 my-3"
   >
-    Experiencia Laboral <BriefcaseIcon class="size-7" />
+    Experiencia Laboral <BriefcaseIcon class="size-8" />
   </h1>
   <ul class="list-none space-y-6">
     <ExperienceItem
       title="Complejo asistencial Dr. Victor Ríos Ruíz"
-      subTitle="Referente de registro de Listas de espera"
+      subTitle="Referente de registro de Listas de espera / Profesional del analisis y gestión de la información  "
       description="Registrar ingresos y egresos de solicitudes de Listas de Espera en los sistemas ministeriales. Proveer de información actualizada a Jefaturas para la toma de decisiones relacionadas a la resolución de solicitudes de Listas de Espera."
       date="sep 2015 - Actualmente"
     >
