--- a/src/Icons/BookMark.astro
+++ b/src/Icons/BookMark.astro
@@ -4,11 +4,13 @@
   width="24"
   height="24"
   viewBox="0 0 24 24"
-  fill="currentColor"
+  fill="none"
   stroke="currentColor"
   stroke-width="2"
   stroke-linecap="round"
   stroke-linejoin="round"
+  class="icon icon-tabler icons-tabler-outline icon-tabler-send-2"
   ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
-    d="M18 7v14l-6 -4l-6 4v-14a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4z"></path></svg
+    d="M4.698 4.034l16.302 7.966l-16.302 7.966a.503 .503 0 0 1 -.546 -.124a.555 .555 0 0 1 -.12 -.568l2.468 -7.274l-2.468 -7.274a.555 .555 0 0 1 .12 -.568a.503 .503 0 0 1 .546 -.124z"
+  ></path><path d="M6.5 12h14.5"></path></svg
 >
