--- a/src/Sections/Profile.astro
+++ b/src/Sections/Profile.astro
@@ -8,6 +8,18 @@ import GmailIcon from "../Icons/Gmail.astro";
 import SendIcon from "../Icons/Send.astro";
 import Tooltip from "../components/Tooltip.astro";
 import CopyIcon from "../Icons/Copy.astro";
+import { CopyButton } from "../components/CopyButton";
+
+const mail = "m.urrutia1991@gmail.com";
+
+const copiarAlPortapapeles = async () => {
+  try {
+    await navigator.clipboard.writeText(mail);
+    alert("Correo copiado al portapapeles");
+  } catch (err) {
+    console.error("Error al copiar:", err);
+  }
+};
 ---
 
 <section id="sobre-mi" class="w-[90%] lg:w-[760px] flex flex-col gap-y-3">
@@ -54,31 +66,18 @@ import CopyIcon from "../Icons/Copy.astro";
         class="flex gap-x-2 text-white/80 rounded-full border border-white/10 bg-white/5 py-2 px-4 text-center"
       >
         <GmailIcon class="size-6" />
-        <label>m.urrutia1991@gmail.com</label>
+        <label>{mail}</label>
       </div>
       <Tooltip text="Enviar email">
-        <SocialPill href="mailto:m.urrutia1991@gmail.com">
+        <SocialPill href={`mailto:${mail}`}>
           <SendIcon class="size-6" />
         </SocialPill>
       </Tooltip>
-      <button
-        class="text-white/80 rounded-full border border-white/10 flex justify-center items-center gap-x-2 py-2 px-4 bg-white/5 hover:scale-110 hover:bg-white/10 transition"
-        onclick="copiarContenido()"
-      >
-        <CopyIcon class="size-6" />
-      </button>
+      <Tooltip text="Copiar email">
+        <CopyButton mail={mail} client:load>
+          <CopyIcon />
+        </CopyButton>
+      </Tooltip>
     </div>
   </div>
 </section>
-
-<script>
-  const email = "m.urrutia1991@gmail.com";
-  const copiarContenido = async () => {
-    try {
-      await navigator.clipboard.writeText(email);
-      console.log("Contenido copiado al portapapeles");
-    } catch (err) {
-      console.error("Error al copiar: ", err);
-    }
-  };
-</script>
