--- a/src/components/Tooltip.astro
+++ b/src/components/Tooltip.astro
@@ -21,24 +21,27 @@ const { text } = Astro.props;
   }
 
   /* Tooltip text */
+  /* Tooltip text */
   .tooltip .tooltiptext {
-    visibility: hidden;
+    opacity: 0; /* Inicialmente oculto */
     width: 120px;
     color: #fff;
     text-align: center;
     padding: 5px 0;
     border-radius: 6px;
-
-    /* Position the tooltip text - see examples below! */
     position: absolute;
     z-index: 1;
     top: -125%;
     left: -55%;
+    transition:
+      opacity 0.4s ease,
+      transform 0.4s ease;
+    transform: translateY(-10px); /* Mueve ligeramente hacia arriba */
   }
 
-  /* Show the tooltip text when you mouse over the tooltip container */
+  /* Show the tooltip text when you hover over the tooltip container */
   .tooltip:hover .tooltiptext {
-    transition: 0.8s;
-    visibility: visible;
+    opacity: 1;
+    transform: translateY(0); /* Regresa a su posición normal */
   }
 </style>
