--- a/src/Sections/Profile.astro
+++ b/src/Sections/Profile.astro
@@ -22,7 +22,7 @@ const copiarAlPortapapeles = async () => {
 };
 ---
 
-<section id="sobre-mi" class="w-[90%] lg:w-[760px] flex flex-col gap-y-3">
+<section id="sobre-mi" class="flex flex-col gap-y-3 items-center w-full">
   <div>
     <img
       class="rounded-full size-24 ring-2 ring-[rgba(102,51,238,0.5)] my-4"
