--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Experience from "../Sections/Experience.astro";
 ---
 
 <Layout title="Porfolio devMarco">
-  <main class="my-40">
+  <main class="flex flex-col my-40 w-full">
     <Profile />
     <hr class="my-20 opacity-20" />
     <Education />
