--- a/src/Sections/Education.astro
+++ b/src/Sections/Education.astro
@@ -4,7 +4,7 @@ import BookMarkIcon from "../Icons/BookMark.astro";
 import ExperienceItem from "../components/ExperienceItem.astro";
 ---
 
-<section id="estudios">
+<section id="estudios" class="px-6">
   <h1
     class="text-white text-2xl font-semibold flex items-center gap-x-2 py-5 my-3"
   >
