--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,11 +9,11 @@ import Experience from "../Sections/Experience.astro";
 ---
 
 <Layout title="Porfolio devMarco">
-  <main class="flex flex-col my-40 w-full">
+  <main class="flex flex-col items-center my-40 w-full lg:max-w-200">
     <Profile />
-    <hr class="my-20 opacity-20" />
+    <hr class="my-10 w-[90%] opacity-20" />
     <Education />
-    <hr class="my-20 opacity-20" />
+    <hr class="my-10 w-[90%] opacity-20" />
     <Experience />
   </main>
 </Layout>
