--- a/src/Sections/Experience.astro
+++ b/src/Sections/Experience.astro
@@ -4,7 +4,7 @@ import BookMarkIcon from "../Icons/BookMark.astro";
 import ExperienceItem from "../components/ExperienceItem.astro";
 ---
 
-<section id="laboral">
+<section id="laboral" class="px-6">
   <h1
     class="text-white text-2xl font-semibold flex items-center gap-x-3 py-5 my-3"
   >
