--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="flex flex-col w-full max-h-screen">
+  <body class="flex flex-col items-center w-full max-h-screen">
     <div
       class="fixed inset-0 -z-10 h-full
       w-full [background:radial-gradient(125%_125%_at_50%_10%,#000_40%,#63e_100%)]"
