pequeño ajuste mobile

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Experience from "../Sections/Experience.astro";
 ---
 
 <Layout title="Porfolio devMarco">
-  <main class="flex flex-col items-center my-40 w-full lg:max-w-200">
+  <main class="flex flex-col items-center my-15 lg:my-40 w-full lg:max-w-200">
     <Profile />
     <hr class="my-10 w-[90%] opacity-20" />
     <Education />
