--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@
 
 <header
   id="navbar"
-  class="bg-white/2 fixed flex justify-center items-center p-3 w-full border-b border-white/2 transition-all duration-500 z-50"
+  class="bg-white/2 fixed top-0 flex justify-center items-center p-3 w-full border-b border-white/2 transition-all duration-500 z-50"
 >
   <nav class="flex flex-row gap-x-5 lg:gap-x-10 opacity-80">
     <a href="#">Inicio</a>
