creando sección proyectos

--- a/src/Sections/Education.astro
+++ b/src/Sections/Education.astro
@@ -14,18 +14,18 @@ import ExperienceItem from "../components/ExperienceItem.astro";
     <ExperienceItem
       title="4Geeks Academy"
       subTitle="Desarrollador de Software Full Stack"
-      description="Desarrollo de aplicaciones web completas con HTML, CSS, JavaScript para el frontend, y Python con Flask para el backend."
+      description="Desarrollo de aplicaciones web completas con HTML, CSS, JavaScript y React para el frontend, y Python con Flask para el backend."
       date="nov 2024"
     >
-      <BookMarkIcon class="size-6" slot="icon" />
+      <BookMarkIcon slot="icon" />
     </ExperienceItem>
     <ExperienceItem
       title="Instituto Profesional Virginio Gomez"
       subTitle="Ingeniero de Ejecución en Computación e Informática"
-      description=""
+      description="Desarrollo de software, administración de bases de datos, redes, seguridad informática y gestión de proyectos tecnológicos."
       date="ago 2021"
     >
-      <BookMarkIcon class="size-6" slot="icon" />
+      <BookMarkIcon slot="icon" />
     </ExperienceItem>
   </ul>
 </section>
