--- a/src/Sections/Experience.astro
+++ b/src/Sections/Experience.astro
@@ -6,18 +6,18 @@ import ExperienceItem from "../components/ExperienceItem.astro";
 
 <section id="laboral" class="px-6">
   <h1
-    class="text-white text-2xl font-semibold flex items-center gap-x-3 py-5 my-3"
+    class="text-white text-2xl font-semibold flex items-center gap-x-2 py-5 my-3"
   >
-    Experiencia Laboral <BriefcaseIcon class="size-8" />
+    Experiencia laboral <BriefcaseIcon class="size-8" />
   </h1>
   <ul class="list-none space-y-6">
     <ExperienceItem
       title="Complejo asistencial Dr. Victor Ríos Ruíz"
       subTitle="Referente de registro de Listas de espera / Profesional del analisis y gestión de la información  "
       description="Registrar ingresos y egresos de solicitudes de Listas de Espera en los sistemas ministeriales. Proveer de información actualizada a Jefaturas para la toma de decisiones relacionadas a la resolución de solicitudes de Listas de Espera."
-      date="sep 2015 - Actualmente"
+      date="sep 2015 - Actual"
     >
-      <BookMarkIcon class="size-6" slot="icon" />
+      <BookMarkIcon slot="icon" />
     </ExperienceItem>
   </ul>
 </section>
