--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -13,7 +13,7 @@ const { title, subTitle, description, date } = Astro.props;
   <div class="flex justify-between">
     <div class="flex gap-x-2 items-center">
       <slot name="icon" />
-      <h3 class="text-yellow-100 text-xl font-bold">{title}</h3>
+      <h3 class="text-yellow-100 lg:text-xl lg:font-bold max-w-40 md:max-w-full">{title}</h3>
     </div>
     <span class="items-center">{date}</span>
   </div>
