--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import Profile from "../Sections/Profile.astro";
 import Education from "../Sections/Education.astro";
 import Experience from "../Sections/Experience.astro";
+import Projects from "../Sections/Projects.astro";
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -15,5 +16,8 @@ import Experience from "../Sections/Experience.astro";
     <Education />
     <hr class="my-10 w-[90%] opacity-20" />
     <Experience />
+    <hr class="my-10 w-[90%] opacity-20" />
+    <Projects />
+    <footer class="h-20"/>
   </main>
 </Layout>
