sección proyectos ok y responsive

--- a/src/Sections/Experience.astro
+++ b/src/Sections/Experience.astro
@@ -14,7 +14,7 @@ import ExperienceItem from "../components/ExperienceItem.astro";
     <ExperienceItem
       title="Complejo asistencial Dr. Victor Ríos Ruíz"
       subTitle="Referente de registro de Listas de espera / Profesional del analisis y gestión de la información  "
-      description="Registrar ingresos y egresos de solicitudes de Listas de Espera en los sistemas ministeriales. Proveer de información actualizada a Jefaturas para la toma de decisiones relacionadas a la resolución de solicitudes de Listas de Espera."
+      description="Gestión y análisis de bases de datos con solicitudes de interconsultas e intervenciones quirúrgicas. Procesamiento y evaluación de datos para generar información clave que facilite la toma de decisiones estratégicas en la unidad de salud."
       date="sep 2015 - Actual"
     >
       <BookMarkIcon slot="icon" />
