--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,6 +11,7 @@
     <a href="#sobre-mi">Sobre Mi</a>
     <a href="#estudios">Estudios</a>
     <a href="#laboral">Experiencia</a>
+    <a href="#proyectos">Proyectos</a>
   </nav>
 </header>
 
