--- a/src/components/ProjectItem.astro
+++ b/src/components/ProjectItem.astro
@@ -11,41 +11,41 @@ interface Props {
   tech: { name: string; icon: string }[];
 }
 
-const { image, alt, title, description, repo, demo, tech } =
-  Astro.props;
+const { image, alt, title, description, repo, demo, tech } = Astro.props;
 ---
 
-<li class="bg-gray-900 rounded-2xl p-4 shadow-lg">
-  <div class="flex flex-col md:flex-row gap-4">
-    <img src={image} alt={alt} class="w-full md:w-1/3 rounded-lg" />
-    <div class="flex-1 space-y-3">
-      <h3 class="text-xl font-bold text-yellow-100">{title}</h3>
-      <p class="text-gray-300 text-sm">{description}</p>
-      <div class="flex items-center gap-3">
-        <span class="text-gray-400 text-sm">Tecnologías:</span>
-        {tech.map((item) => (
-            <Tooltip text={item.name}>
-              <img src={item.icon} alt={item.name} class="w-6 h-6" />
-            </Tooltip>
-          ))}
-          
-      </div>
-      <div class="flex gap-3">
-        <a
-          href={repo}
-          target="_blank"
-          class="px-4 py-2 bg-gray-700 text-white rounded-lg text-sm hover:bg-gray-600"
-        >
-          Código
-        </a>
-        <a
-          href={demo}
-          target="_blank"
-          class="px-4 py-2 bg-blue-600 text-white rounded-lg text-sm hover:bg-blue-500"
-        >
-          Ver Demo
-        </a>
-      </div>
+<div class="flex flex-col lg:flex-row gap-4 bg-indigo-950 p-4 rounded-2xl">
+  <div class="lg:w-[50%] border border-amber-50/10 rounded-2xl overflow-hidden place-items-center place-content-center">
+    <img src={image} alt={alt} class="h-full"/>
+  </div>
+  <div class="flex-1 space-y-3">
+    <h3 class="text-xl font-bold text-yellow-100">{title}</h3>
+    <p class="text-gray-300 text-sm">{description}</p>
+    <div class="flex items-center gap-3">
+      <span class="text-gray-400 text-sm">Tecnologías:</span>
+      {
+        tech.map((item) => (
+          <Tooltip text={item.name}>
+            <img src={item.icon} alt={item.name} class="w-6 h-6" />
+          </Tooltip>
+        ))
+      }
+    </div>
+    <div class="flex gap-3">
+      <a
+        href={repo}
+        target="_blank"
+        class="px-4 py-2 bg-gray-700 text-white rounded-lg text-sm hover:bg-gray-600"
+      >
+        Código
+      </a>
+      <a
+        href={demo}
+        target="_blank"
+        class="px-4 py-2 bg-blue-600 text-white rounded-lg text-sm hover:bg-blue-500"
+      >
+        Ver Demo
+      </a>
     </div>
   </div>
-</li>
+</div>
