--- a/src/components/Tooltip.astro
+++ b/src/components/Tooltip.astro
@@ -9,7 +9,7 @@ const { text } = Astro.props;
 <div class="tooltip">
   <slot />
   <span
-    class="tooltiptext text-white/80 rounded-full border border-white/10 bg-white/5"
+    class="tooltiptext text-white/80 rounded-full border border-white/10 bg-gray-500/95"
     >{text}</span
   >
 </div>
@@ -31,8 +31,8 @@ const { text } = Astro.props;
     border-radius: 6px;
     position: absolute;
     z-index: 1;
-    top: -125%;
-    left: -55%;
+    top: -160%;
+    left: -200%;
     transition:
       opacity 0.4s ease,
       transform 0.4s ease;
