iconos de tecnologias movidos a public

--- a/src/Sections/Projects.astro
+++ b/src/Sections/Projects.astro
@@ -18,8 +18,8 @@ import ProjectsIcon from "../Icons/ProjectsIcon.astro";
       repo="https://github.com/marcourrutia/starwars-blog"
       demo="https://marcourrutia.github.io/starwars-blog/"
       tech={[
-        { name: "React", icon: "src/Icons/React.svg" },
-        { name: "CSS", icon: "src/Icons/CSS.svg" },
+        { name: "React", icon: "/icons/React.svg" },
+        { name: "CSS", icon: "/icons/CSS.svg" },
       ]}
     />
     <ProjectItem
@@ -30,9 +30,9 @@ import ProjectsIcon from "../Icons/ProjectsIcon.astro";
       repo="https://github.com/marcourrutia/BattleShip"
       demo="https://battle-ship-gules-zeta.vercel.app/"
       tech={[
-        { name: "React", icon: "src/Icons/React.svg" },
-        { name: "CSS", icon: "src/Icons/CSS.svg" },
-        { name: "Tailwind", icon: "src/Icons/Tailwind.svg" },
+        { name: "React", icon: "/icons/React.svg" },
+        { name: "CSS", icon: "/icons/CSS.svg" },
+        { name: "Tailwind", icon: "/icons/Tailwind.svg" },
       ]}
     />
   </div>
