correccion navbar en mobil

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,10 +4,9 @@
 
 <header
   id="navbar"
-  class="bg-white/2 fixed top-0 flex justify-center items-center p-3 w-full border-b border-white/2 transition-all duration-500 z-50"
+  class="bg-white/2 fixed -top-3 lg:top-0 flex justify-center items-center pt-5 lg:pt-3 pb-3 w-full border-b border-white/2 z-50 backdrop-blur-md shadow-md"
 >
-  <nav class="flex flex-row gap-x-5 lg:gap-x-10 opacity-80">
-    <a href="#">Inicio</a>
+  <nav class="flex flex-row gap-x-3 lg:gap-x-10 opacity-80">
     <a href="#sobre-mi">Sobre Mi</a>
     <a href="#estudios">Estudios</a>
     <a href="#laboral">Experiencia</a>
@@ -15,7 +14,7 @@
   </nav>
 </header>
 
-<script>
+<!-- <script>
   document.addEventListener("DOMContentLoaded", () => {
     const navbar = document.getElementById("navbar");
 
@@ -29,4 +28,4 @@
       }
     });
   });
-</script>
+</script> -->
