--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,6 +40,11 @@ const { title } = Astro.props;
       scroll-margin-top: 55px;
     }
 
+    nav a:hover {
+      transition: 0.3s;
+      transform: scale(1.1);
+    }
+
     @media (prefers-reduced-motion: reduce) {
       html {
         scroll-behavior: auto;
