--- a/src/Sections/Profile.astro
+++ b/src/Sections/Profile.astro
@@ -40,9 +40,17 @@ const mail = "m.urrutia1991@gmail.com";
       </a>
     </div>
   </div>
-  <h2 class="text-xl opacity-80 py-5">
-    🌟 Apasionado por el desarrollo web, enfocado en calidad e innovación.
-    Siempre buscando llevar los proyectos a nuevas órbitas 🚀.
+  <h2 class="text-xl opacity-80 pt-5">
+    Desarrollador web full stack ⚡ con experiencia en analisis de información
+    de bases de datos y extracción de información clave para la toma de
+    decisiones 📊.
+  </h2>
+  <h2 class="text-xl opacity-70">
+    Me gusta resolver problemas complejos 🧩, adaptarme a distintos entornos 🔄
+    y trabajar en equipo 🤝 para crear soluciones eficientes y escalables.
+  </h2>
+  <h2 class="text-xl opacity-70 pb-5">
+    Actualmente, estoy haciendo la transición al desarrollo web 🚀 y enfocándome en aplicar mis habilidades en este nuevo camino.
   </h2>
   <div class="flex flex-col lg:flex-row justify-between gap-y-4 w-full">
     <nav class="flex gap-x-2">
@@ -60,21 +68,21 @@ const mail = "m.urrutia1991@gmail.com";
     </nav>
     <div class="flex gap-x-1 w-full justify-between lg:w-fit">
       <div
-        class="flex gap-x-1 text-white/80 rounded-full border border-white/10 bg-white/5 py-2 px-4"
+        class="flex gap-x-2 text-white/80 rounded-full border border-white/10 bg-white/5 py-2 px-4"
       >
         <GmailIcon class="size-5" />
         <label>{mail}</label>
+        <CopyButton mail={mail} client:load>
+          <Tooltip text="Copiar email">
+            <CopyIcon />
+          </Tooltip>
+        </CopyButton>
       </div>
       <SocialPill href={`mailto:${mail}`}>
         <Tooltip text="Enviar email">
           <SendIcon class="size-6" />
         </Tooltip>
       </SocialPill>
-      <CopyButton mail={mail} client:load>
-        <Tooltip text="Copiar email">
-          <CopyIcon />
-        </Tooltip>
-      </CopyButton>
     </div>
   </div>
 </section>
