--- a/src/components/ProjectItem.astro
+++ b/src/components/ProjectItem.astro
@@ -14,7 +14,7 @@ interface Props {
 const { image, alt, title, description, repo, demo, tech } = Astro.props;
 ---
 
-<div class="flex flex-col lg:flex-row gap-4 bg-indigo-950 p-4 rounded-2xl">
+<div class="flex flex-col lg:flex-row gap-4 bg-indigo-950 p-4 rounded-2xl lg:transition duration-300 lg:hover:scale-110">
   <div class="lg:w-[50%] border border-amber-50/10 rounded-2xl overflow-hidden place-items-center place-content-center">
     <img src={image} alt={alt} class="h-full"/>
   </div>
