--- a/src/components/ProjectItem.astro
+++ b/src/components/ProjectItem.astro
@@ -15,8 +15,8 @@ const { image, alt, title, description, repo, demo, tech } = Astro.props;
 ---
 
 <div class="flex flex-col lg:flex-row gap-4 bg-indigo-950 p-4 rounded-2xl lg:transition duration-300 lg:hover:scale-110">
-  <div class="lg:w-[50%] border border-amber-50/10 rounded-2xl overflow-hidden place-items-center place-content-center">
-    <img src={image} alt={alt} class="h-full"/>
+  <div class="lg:w-[50%] max-h-fit  border border-amber-50/10 rounded-2xl overflow-hidden place-items-center place-content-center">
+    <img src={image} alt={alt} class="h-full w-full"/>
   </div>
   <div class="flex-1 space-y-3">
     <h3 class="text-xl font-bold text-yellow-100">{title}</h3>
