--- a/src/Sections/Profile.astro
+++ b/src/Sections/Profile.astro
@@ -10,7 +10,7 @@ import Tooltip from "../components/Tooltip.astro";
 import CopyIcon from "../Icons/Copy.astro";
 import { CopyButton } from "../components/CopyButton";
 
-const mail = "m.urrutia1991@gmail.com";
+const mail = "devmarco.web@gmail.com";
 ---
 
 <section
@@ -41,17 +41,13 @@ const mail = "m.urrutia1991@gmail.com";
     </div>
   </div>
   <h2 class="text-xl opacity-80 pt-5">
-    Desarrollador web full stack ⚡ con experiencia en análisis de datos y
-    extracción de información clave para apoyar la toma de decisiones
-    estratégicas 📊.
+    Desarrollador web full stack ⚡ con experiencia en análisis de datos y extracción de información clave para apoyar la toma de decisiones estratégicas 📊.
   </h2>
   <h2 class="text-xl opacity-70">
-    Me gusta resolver problemas complejos 🧩, adaptarme a distintos entornos 🔄
-    y trabajar en equipo 🤝 para crear soluciones eficientes y escalables.
+    Me gusta resolver problemas complejos 🧩, adaptarme a distintos entornos 🔄 y trabajar en equipo 🤝 para crear soluciones eficientes y escalables.
   </h2>
   <h2 class="text-xl opacity-70 pb-5">
-    Actualmente, estoy haciendo la transición al desarrollo web 🚀 y enfocándome
-    en aplicar mis habilidades en este nuevo camino.
+    Actualmente, estoy haciendo la transición al desarrollo web 🚀 y enfocándome en aplicar mis habilidades en este nuevo camino.
   </h2>
   <div class="flex flex-col lg:flex-row justify-between gap-y-4 w-full">
     <nav class="flex gap-x-2">
