add wallet wise

--- a/src/Sections/Projects.astro
+++ b/src/Sections/Projects.astro
@@ -11,6 +11,18 @@ import ProjectsIcon from "../Icons/ProjectsIcon.astro";
   </h1>
   <div class="flex flex-col gap-8">
     <ProjectItem
+      image="/assets/wallet-wise-bg.webp"
+      alt="Wallet Wise App image"
+      title="Wallet Wise"
+      description="Wallet Wise es una app de gestión financiera que, además de registrar gastos e ingresos, ofrece consejos personalizados con ChatGPT para optimizar tu presupuesto y mejorar tus hábitos de ahorro."
+      repo="https://github.com/marcourrutia/wallet-wise"
+      demo="https://wallet-wise-front.vercel.app/"
+      tech={[
+        { name: "React", icon: "/icons/React.svg" },
+        { name: "CSS", icon: "/icons/CSS.svg" },
+      ]}
+    />
+    <ProjectItem
       image="/assets/starwarsBlogBG.webp"
       alt="Star Wars Guide image"
       title="Star Wars Guide"
