--- a/src/Sections/Profile.astro
+++ b/src/Sections/Profile.astro
@@ -41,13 +41,10 @@ const mail = "devmarco.web@gmail.com";
     </div>
   </div>
   <h2 class="text-xl opacity-80 pt-5">
-    Desarrollador web full stack ⚡ con experiencia en análisis de datos y extracción de información clave para apoyar la toma de decisiones estratégicas 📊.
+    Desarrollador web full stack ⚡ con experiencia en análisis de bases de datos para apoyar la toma de decisiones estratégicas 📊.
   </h2>
   <h2 class="text-xl opacity-70">
-    Me gusta resolver problemas complejos 🧩, adaptarme a distintos entornos 🔄 y trabajar en equipo 🤝 para crear soluciones eficientes y escalables.
-  </h2>
-  <h2 class="text-xl opacity-70 pb-5">
-    Actualmente, estoy haciendo la transición al desarrollo web 🚀 y enfocándome en aplicar mis habilidades en este nuevo camino.
+    Me apasiona ser detallista en casi todos los ámbitos de mi día a día, incluido el desarrollo web. Mi meta a corto plazo es conseguir una chamba como desarrollador y poder darlo todo en ese rubro, haciéndolo todo como para Dios (Colosenses 3:23). 🙌
   </h2>
   <div class="flex flex-col lg:flex-row justify-between gap-y-4 w-full">
     <nav class="flex gap-x-2">
