--- a/src/Sections/Profile.astro
+++ b/src/Sections/Profile.astro
@@ -43,8 +43,8 @@ const mail = "devmarco.web@gmail.com";
   <h2 class="text-xl opacity-80 pt-5">
     Desarrollador web full stack ⚡ con experiencia en análisis de bases de datos para apoyar la toma de decisiones estratégicas 📊.
   </h2>
-  <h2 class="text-xl opacity-70">
-    Me apasiona ser detallista en casi todos los ámbitos de mi día a día, incluido el desarrollo web. Mi meta a corto plazo es conseguir una chamba como desarrollador y poder darlo todo en ese rubro, haciéndolo todo como para Dios (Colosenses 3:23). 🙌
+  <h2 class="text-l opacity-70 pb-5">
+    Me apasiona ser detallista en casi todos los ámbitos de mi día a día, incluido el desarrollo web. Mi meta a corto plazo es conseguir un trabajo como desarrollador y poder darlo todo en ese rubro, haciéndolo todo como para Dios 🙌 (Colosenses 3:23).
   </h2>
   <div class="flex flex-col lg:flex-row justify-between gap-y-4 w-full">
     <nav class="flex gap-x-2">
