--- a/src/Sections/Projects.astro
+++ b/src/Sections/Projects.astro
@@ -18,8 +18,11 @@ import ProjectsIcon from "../Icons/ProjectsIcon.astro";
       repo="https://github.com/marcourrutia/wallet-wise"
       demo="https://wallet-wise-front.vercel.app/"
       tech={[
-        { name: "React", icon: "/icons/React.svg" },
-        { name: "CSS", icon: "/icons/CSS.svg" },
+        { name: "React", icon: "/icons/React.svg", class: "size-6" },
+        { name: "CSS", icon: "/icons/CSS.svg", class: "size-6" },
+        { name: "Python", icon: "/icons/Python.svg", class: "h-6 w-5" },
+        { name: "Flask", icon: "/icons/Flask.svg", class: "size-6 text-green" },
+        { name: "JWT", icon: "/icons/JWT.svg", class: "size-6" },
       ]}
     />
     <ProjectItem
@@ -30,8 +33,8 @@ import ProjectsIcon from "../Icons/ProjectsIcon.astro";
       repo="https://github.com/marcourrutia/starwars-blog"
       demo="https://marcourrutia.github.io/starwars-blog/"
       tech={[
-        { name: "React", icon: "/icons/React.svg" },
-        { name: "CSS", icon: "/icons/CSS.svg" },
+        { name: "React", icon: "/icons/React.svg", class: "size-6" },
+        { name: "CSS", icon: "/icons/CSS.svg", class: "size-6" },
       ]}
     />
     <ProjectItem
@@ -42,9 +45,9 @@ import ProjectsIcon from "../Icons/ProjectsIcon.astro";
       repo="https://github.com/marcourrutia/BattleShip"
       demo="https://battle-ship-gules-zeta.vercel.app/"
       tech={[
-        { name: "React", icon: "/icons/React.svg" },
-        { name: "CSS", icon: "/icons/CSS.svg" },
-        { name: "Tailwind", icon: "/icons/Tailwind.svg" },
+        { name: "React", icon: "/icons/React.svg", class: "size-6" },
+        { name: "CSS", icon: "/icons/CSS.svg", class: "size-6" },
+        { name: "Tailwind", icon: "/icons/Tailwind.svg", class: "size-6" },
       ]}
     />
   </div>
