--- a/src/components/ProjectItem.astro
+++ b/src/components/ProjectItem.astro
@@ -8,7 +8,7 @@ interface Props {
   description: string;
   repo: string;
   demo: string;
-  tech: { name: string; icon: string }[];
+  tech: { name: string; icon: string; class: string }[];
 }
 
 const { image, alt, title, description, repo, demo, tech } = Astro.props;
@@ -26,7 +26,7 @@ const { image, alt, title, description, repo, demo, tech } = Astro.props;
       {
         tech.map((item) => (
           <Tooltip text={item.name}>
-            <img src={item.icon} alt={item.name} class="w-6 h-6" />
+            <img src={item.icon} alt={item.name} class={item.class} />
           </Tooltip>
         ))
       }
