--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Profile from "../Sections/Profile.astro";
 import Education from "../Sections/Education.astro";
 import Experience from "../Sections/Experience.astro";
 import Projects from "../Sections/Projects.astro";
+import Footer from "../components/Footer.astro";
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -18,6 +19,6 @@ import Projects from "../Sections/Projects.astro";
     <Experience />
     <hr class="my-10 w-[90%] opacity-20" />
     <Projects />
-    <footer class="h-20"/>
+    <Footer />
   </main>
 </Layout>
