--- a/src/Sections/Profile.astro
+++ b/src/Sections/Profile.astro
@@ -9,6 +9,7 @@ import SendIcon from "../Icons/Send.astro";
 import Tooltip from "../components/Tooltip.astro";
 import CopyIcon from "../Icons/Copy.astro";
 import { CopyButton } from "../components/CopyButton";
+import DownloadCV from "../Icons/DownloadCV.astro";
 
 const mail = "devmarco.web@gmail.com";
 ---
@@ -30,21 +31,29 @@ const mail = "devmarco.web@gmail.com";
         Hey, soy devMarco
       </h1>
       <a
-        href="https://linkedin.com/in/dev-marco-urrutia"
-        title="Mi Linkedin"
+        href="https://drive.google.com/file/d/1KqnxcM1TRFD5UeqJ0q3WlHdwPRVQjtpm/view?usp=drive_link"
+        title="Descargar CV"
         target="_blank"
         rel="noopener"
         class="flex items-center"
       >
-        <Badge>Disponible para trabajar</Badge>
+        <Badge>Mi CV<DownloadCV /></Badge>
       </a>
     </div>
   </div>
-  <h2 class="text-xl opacity-80 pt-5">
-    Desarrollador web full stack ⚡ con experiencia en análisis de bases de datos para apoyar la toma de decisiones estratégicas 📊.
+  <h2 class="text-xl opacity-85 pt-5">
+    Desarrollador web full stack ⚡ con experiencia en análisis de bases de
+    datos para apoyar la toma de decisiones estratégicas 📊.
   </h2>
-  <h2 class="text-l opacity-70 pb-5">
-    Me apasiona ser detallista en casi todos los ámbitos de mi día a día, incluido el desarrollo web. Mi meta a corto plazo es conseguir un trabajo como desarrollador y poder darlo todo en ese rubro, haciéndolo todo como para Dios 🙌 (Colosenses 3:23).
+  <h2 class="text-l opacity-70">
+    Me apasiona ser detallista en casi todos los ámbitos de mi día a día,
+    incluido el desarrollo web. Mi meta a corto plazo es conseguir un trabajo
+    como desarrollador y poder darlo todo en ese rubro, haciéndolo todo como
+    para Dios 🙌 (Colosenses 3:23).
+  </h2>
+  <h2 class="text-l opacity-85 pb-5">
+    Actualmente busco oportunidades como desarrollador frontend/backend/full
+    stack en equipos donde pueda crecer y aportar valor
   </h2>
   <div class="flex flex-col lg:flex-row justify-between gap-y-4 w-full">
     <nav class="flex gap-x-2">
