--- a/src/components/Badge.astro
+++ b/src/components/Badge.astro
@@ -1,4 +1,4 @@
 <span
-  class="bg-indigo-100 hover:bg-indigo-200 text-indigo-800 text-sm font-medium me-2 px-2.5 py-0.5 rounded-sm dark:bg-gray-700 dark:text-indigo-400 border border-indigo-400 text-nowrap"
+  class="bg-indigo-100 hover:bg-indigo-200 text-indigo-800 text-sm font-medium me-2 p-1 rounded-sm dark:bg-gray-700 dark:text-indigo-400 border border-indigo-400 text-nowrap flex items-center"
   ><slot /></span
 >
